--- a/tests/PackIt.Tests.Domain/PackIt.Tests.Domain.csproj
+++ b/tests/PackIt.Tests.Domain/PackIt.Tests.Domain.csproj
@@ -21,4 +21,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\PackIt.Domain\PackIt.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
